--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,5 +9,9 @@
 @import '~bootstrap/scss/bootstrap';
 
 .container {
-    margin-top: 60px;
+    padding-top: 60px;
+}
+
+.card-deck {
+    padding-top: 20px;
 }
